fix issue on mobile and add debounce for speed

--- a/server/style.css
+++ b/server/style.css
@@ -13,3 +13,24 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
 }
+
+html, body {
+  width: 100%;
+  height: 100%;
+}
+
+body {
+}
+
+.joystick-container {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
+.joystick {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+}
